kubernetes/default/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: default
  annotations:
    argocd.argoproj.io/sync-wave: "100"
spec:
  selector:
    app: radarr
  ports:
    - targetPort: 7878
      port: 7878
